# ssf-cli

./: .gitignore  FILE_PROCESSING_EXAMPLES.md  MIGRATION.md  PROJECT_SUMMARY.md  README.md  SCRIPTS_DEVELOPMENT_GUIDE.md  SOLUTION.md  STRUCTURE.md  check_env.py  deploy.sh  dev_install.py  dev_ssf.py  install.py  install_curl.sh  install_remote.py  pyproject.toml  quick_test.py  setup_global_dev.py  test_backup.py  test_commands.py  test_simple.py  uninstall.sh
src/ssf_cli/: __init__.py  commands.py  commands_simple.py  config.py  main.py  utils.py
src/ssf_cli/core/: __init__.py  base.py  manager.py
src/ssf_cli/scripts/: __init__.py  delete.py  manager.py  rename.py
